Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
The toolbars in the explorer windows are not locked by default. This is because the shell does not read/write from the registry which state the Lock Toolbars menu item should be.
Attachments
Issue Links
- is duplicated by
-
CORE-11503 Incorrect default checked for item "Lock the Toolbars" in ReacOS Explorer
-
- Resolved
-
- relates to
-
CORE-17236 Disabling "Standard Buttons" toolbar in Explorer does not work correctly
-
- Resolved
-